# pm-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
conductor/: __init__.py  abort_watcher.py  cli.py  concurrency.py  corrections.py  cost.py  driver.py  escalation.py  feedback.py  guardrails.py  memory.py  pm.py  pm_session.py  process_group.py  project_init.py  project_store.py  status_view.py  tasks.py  utils.py  worktree.py
conductor/prompts/: init_pm.md  worker_template.md
conductor/schemas/: feedback.schema.json
conductor/workers/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  registry.py
docs/: CUSTOM_WORKERS.md
pm_agent/: __init__.py  abort_watcher.py  cli.py  concurrency.py  corrections.py  cost.py  driver.py  escalation.py  feedback.py  guardrails.py  memory.py  pm.py  pm_session.py  process_group.py  project_init.py  project_store.py  status_view.py  tasks.py  utils.py  worktree.py
pm_agent/prompts/: distill.md  pm_system.md
pm_agent/schemas/: decision.schema.json  tasks.schema.json
pm_agent/workers/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  registry.py
tests/: test_concurrency.py  test_driver_lifecycle.py  test_integration.py  test_pm_session.py  test_scenarios.py
