[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conductor"
version = "0.1.0"
description = "Multi-Agent automated development orchestration system (Conductor)"
requires-python = ">=3.11"
authors = [{ name = "Boss" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
conductor = "conductor.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["conductor*"]

[tool.setuptools.package-data]
conductor = ["prompts/*.md", "schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
