[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-agent"
version = "0.1.0"
description = "pm-agent — a multi-agent dev orchestrator that, like an octopus, dispatches tasks across multiple coding CLIs (Claude Code / Codex / Gemini) in parallel. Nickname: Octopus Assistant / 章鱼助手."
requires-python = ">=3.11"
authors = [{ name = "Tako-yang" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
pm-agent = "pm_agent.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pm_agent*"]

[tool.setuptools.package-data]
pm_agent = ["prompts/*.md", "schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
